straigten out date val in user log database

--- a/templates/tab_history.html
+++ b/templates/tab_history.html
@@ -24,7 +24,7 @@
     }
     // Define DB column order for each table
     const userLogOrder = [
-      'id', 'date_entered', 'belt_eggs', 'floor_eggs', 'mortality_indoor', 'mortality_outdoor', 'euthanized_indoor', 'euthanized_outdoor', 'depop', 'amount_delivered', 'mortality_reasons', 'cull_reasons', 'mortality_comments', 'coolerlog_comments', 'added_supplements', 'birds_restricted_reason', 'comments', 'weather', 'air_sensory', 'ration', 'drinkers_clean', 'birds_under_slats', 'safe_indoors', 'safe_outdoors', 'equipment_functioning', 'predator_activity', 'eggs_picked_up', 'door_open', 'door_closed'
+      'id', 'date', 'belt_eggs', 'floor_eggs', 'mortality_indoor', 'mortality_outdoor', 'euthanized_indoor', 'euthanized_outdoor', 'depop', 'amount_delivered', 'mortality_reasons', 'cull_reasons', 'mortality_comments', 'coolerlog_comments', 'added_supplements', 'birds_restricted_reason', 'comments', 'weather', 'air_sensory', 'ration', 'drinkers_clean', 'birds_under_slats', 'safe_indoors', 'safe_outdoors', 'equipment_functioning', 'predator_activity', 'eggs_picked_up', 'door_open', 'door_closed'
     ];
     const botLogOrder = [
       'id', 'date', 'bird_age', 'feed_consumption', 'lights_on', 'lights_off', 'water_consumption', 'body_weight', 'door_open', 'door_closed', 'birds_restricted', 'inside_low_temp', 'inside_high_temp', 'outside_low_temp', 'outside_high_temp', 'cooler_time_am', 'cooler_temp_am', 'cooler_time_pm', 'cooler_temp_pm'
