rename label for clarity

--- a/templates/tab_today.html
+++ b/templates/tab_today.html
@@ -196,7 +196,7 @@
     const fieldDisplayNames = {
       'id': 'ID',
       'date': 'Date',
-      'send_to_bot': 'Send to Unitas',
+      'send_to_bot': 'Schedule Send to Unitas',
       'belt_eggs': 'Belt Eggs',
       'floor_eggs': 'Floor Eggs',
       'total_eggs': 'Total Eggs',
